--- a/apps/game-arena/public/profile.html
+++ b/apps/game-arena/public/profile.html
@@ -14,6 +14,7 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,12 +22,13 @@
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="stylesheet" href="/styles/profile.css" />
 </head>
+
 <body>
   <div class="profile-container">
     <header class="profile-header">
       <div>
         <a href="/arena" class="back-link">← Back to Arena</a>
-        <h1> Player Profile</h1>
+        <h1>Player Profile</h1>
       </div>
       <div class="user-panel">
         <img id="user-avatar" src="" alt="User Avatar" />
@@ -60,7 +62,7 @@
 
       <!-- Stats Section -->
       <section class="profile-section stats-section">
-        <h3> Game Statistics</h3>
+        <h3>Game Statistics</h3>
         <div class="stats-grid">
           <div class="stats-card">
             <div class="stat-label">Total Games</div>
@@ -83,7 +85,7 @@
 
       <!-- Game-Specific Stats -->
       <section class="profile-section game-stats-section">
-        <h3> Degens Against Decency</h3>
+        <h3>Degens Against Decency</h3>
         <div class="stats-grid">
           <div class="stats-card">
             <div class="stat-label">DA&D Games</div>
@@ -106,7 +108,7 @@
 
       <!-- Recent Games Section -->
       <section class="profile-section recent-games-section">
-        <h3> Recent Games</h3>
+        <h3>Recent Games</h3>
         <div id="recent-games-list" class="game-history-list">
           <div class="loading">Loading recent games...</div>
         </div>
@@ -114,7 +116,7 @@
 
       <!-- Pending Tips Section -->
       <section id="pending-tips-section" class="profile-section pending-tips-section" style="display: none;">
-        <h3> Pending Tips</h3>
+        <h3>Pending Tips</h3>
         <p style="color: #888; margin-bottom: 16px;">Tips waiting for you to register your wallet</p>
         <div id="pending-tips-list" class="game-history-list">
           <div class="loading">Loading pending tips...</div>
@@ -123,8 +125,9 @@
 
       <!-- JustTheTip History Section -->
       <section class="profile-section tip-history-section">
-        <h3> JustTheTip History</h3>
-        <div class="tip-stats-row" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 16px; margin-bottom: 20px;">
+        <h3>JustTheTip History</h3>
+        <div class="tip-stats-row"
+          style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 16px; margin-bottom: 20px;">
           <div class="stats-card">
             <div class="stat-label">Total Sent</div>
             <div class="stat-value" id="tip-total-sent">0 SOL</div>
@@ -149,7 +152,7 @@
 
       <!-- Achievements Section -->
       <section class="profile-section achievements-section">
-        <h3> Achievements</h3>
+        <h3>Achievements</h3>
         <div class="achievements-grid" id="achievements-grid">
           <div class="achievement unlocked">
             <span class="achievement-icon"></span>
@@ -184,19 +187,20 @@
 
       <!-- Integrations Section -->
       <section id="integrations" class="profile-section integrations-section">
-        <h3> Integrations</h3>
+        <h3>Integrations</h3>
         <p class="section-desc">Connect your game arena with other TiltCheck services</p>
-        
+
         <div class="integrations-grid">
           <div class="integration-card connected">
             <div class="integration-icon">
               <svg width="32" height="32" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/>
+                <path
+                  d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z" />
               </svg>
             </div>
             <div class="integration-info">
               <div class="integration-name">Discord</div>
-              <div class="integration-status"> Connected</div>
+              <div class="integration-status">Connected</div>
             </div>
           </div>
 
@@ -233,4 +237,5 @@
 
   <script src="/scripts/profile.js"></script>
 </body>
+
 </html>
