--- a/apps/web/beta.html
+++ b/apps/web/beta.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Join TiltCheck Beta - Get Early Access</title>
-  <meta name="description" content="Sign up for TiltCheck beta and help shape the future of responsible gambling tools. Get early access to features, provide feedback, and earn rewards.">
+  <meta name="description"
+    content="Sign up for TiltCheck beta and help shape the future of responsible gambling tools. Get early access to features, provide feedback, and earn rewards.">
   <link rel="stylesheet" href="/styles/main.css">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
   <style>
@@ -359,11 +361,13 @@
     }
   </style>
 </head>
+
 <body>
   <div class="hero">
-    <span class="beta-badge"> Open Beta</span>
+    <span class="beta-badge">Open Beta</span>
     <h1>Join the TiltCheck Beta Program</h1>
-    <p>Help us build the future of responsible gambling tools. Get early access, shape features, and earn rewards for your feedback.</p>
+    <p>Help us build the future of responsible gambling tools. Get early access, shape features, and earn rewards for
+      your feedback.</p>
   </div>
 
   <div class="container">
@@ -428,12 +432,13 @@
       <!-- Sign Up Form -->
       <div class="card" id="signup-card">
         <h2>Sign Up for Beta</h2>
-        
+
         <form class="signup-form" id="beta-form">
           <!-- Discord OAuth -->
           <a href="/api/auth/discord?beta=true" class="discord-btn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M20.317 4.492c-1.53-.69-3.17-1.2-4.885-1.49a.075.075 0 0 0-.079.036c-.21.369-.444.85-.608 1.23a18.566 18.566 0 0 0-5.487 0 12.36 12.36 0 0 0-.617-1.23A.077.077 0 0 0 8.562 3c-1.714.29-3.354.8-4.885 1.491a.07.07 0 0 0-.032.027C.533 9.093-.32 13.555.099 17.961a.08.08 0 0 0 .031.055 20.03 20.03 0 0 0 5.993 2.98.078.078 0 0 0 .084-.026c.462-.62.874-1.275 1.226-1.963.021-.04.001-.088-.041-.104a13.201 13.201 0 0 1-1.872-.878.075.075 0 0 1-.008-.125c.126-.093.252-.19.372-.287a.075.075 0 0 1 .078-.01c3.927 1.764 8.18 1.764 12.061 0a.075.075 0 0 1 .079.009c.12.098.245.195.372.288a.075.075 0 0 1-.006.125c-.598.344-1.22.635-1.873.877a.075.075 0 0 0-.041.105c.36.687.772 1.341 1.225 1.962a.077.077 0 0 0 .084.028 19.963 19.963 0 0 0 6.002-2.981.076.076 0 0 0 .032-.054c.5-5.094-.838-9.52-3.549-13.442a.06.06 0 0 0-.031-.028zM8.02 15.278c-1.182 0-2.157-1.069-2.157-2.38 0-1.312.956-2.38 2.157-2.38 1.21 0 2.176 1.077 2.157 2.38 0 1.312-.956 2.38-2.157 2.38zm7.975 0c-1.183 0-2.157-1.069-2.157-2.38 0-1.312.955-2.38 2.157-2.38 1.21 0 2.176 1.077 2.157 2.38 0 1.312-.946 2.38-2.157 2.38z"/>
+              <path
+                d="M20.317 4.492c-1.53-.69-3.17-1.2-4.885-1.49a.075.075 0 0 0-.079.036c-.21.369-.444.85-.608 1.23a18.566 18.566 0 0 0-5.487 0 12.36 12.36 0 0 0-.617-1.23A.077.077 0 0 0 8.562 3c-1.714.29-3.354.8-4.885 1.491a.07.07 0 0 0-.032.027C.533 9.093-.32 13.555.099 17.961a.08.08 0 0 0 .031.055 20.03 20.03 0 0 0 5.993 2.98.078.078 0 0 0 .084-.026c.462-.62.874-1.275 1.226-1.963.021-.04.001-.088-.041-.104a13.201 13.201 0 0 1-1.872-.878.075.075 0 0 1-.008-.125c.126-.093.252-.19.372-.287a.075.075 0 0 1 .078-.01c3.927 1.764 8.18 1.764 12.061 0a.075.075 0 0 1 .079.009c.12.098.245.195.372.288a.075.075 0 0 1-.006.125c-.598.344-1.22.635-1.873.877a.075.075 0 0 0-.041.105c.36.687.772 1.341 1.225 1.962a.077.077 0 0 0 .084.028 19.963 19.963 0 0 0 6.002-2.981.076.076 0 0 0 .032-.054c.5-5.094-.838-9.52-3.549-13.442a.06.06 0 0 0-.031-.028zM8.02 15.278c-1.182 0-2.157-1.069-2.157-2.38 0-1.312.956-2.38 2.157-2.38 1.21 0 2.176 1.077 2.157 2.38 0 1.312-.956 2.38-2.157 2.38zm7.975 0c-1.183 0-2.157-1.069-2.157-2.38 0-1.312.955-2.38 2.157-2.38 1.21 0 2.176 1.077 2.157 2.38 0 1.312-.946 2.38-2.157 2.38z" />
             </svg>
             Sign up with Discord
           </a>
@@ -503,7 +508,8 @@
 
           <label class="checkbox-item" style="margin-top: 10px;">
             <input type="checkbox" name="terms" required>
-            I agree to the <a href="/terms.html" style="color: #6366f1;">Terms of Service</a> and <a href="/privacy.html" style="color: #6366f1;">Privacy Policy</a>
+            I agree to the <a href="/terms.html" style="color: #6366f1;">Terms of Service</a> and <a
+              href="/privacy.html" style="color: #6366f1;">Privacy Policy</a>
           </label>
 
           <button type="submit" class="submit-btn" id="submit-btn">Join Beta Program</button>
@@ -515,13 +521,18 @@
           <h3>You're In!</h3>
           <p>Welcome to the beta! Follow the steps below to get started with Auto-Vault.</p>
 
-          <div style="text-align: left; margin: 20px 0; padding: 20px; background: rgba(255,255,255,0.03); border: 1px solid var(--border-subtle); border-radius: 12px;">
+          <div
+            style="text-align: left; margin: 20px 0; padding: 20px; background: rgba(255,255,255,0.03); border: 1px solid var(--border-subtle); border-radius: 12px;">
             <h4 style="margin-bottom: 12px;">Get Started with Auto-Vault</h4>
             <ol style="list-style: decimal; padding-left: 20px; color: var(--text-secondary); line-height: 2;">
-              <li>Install <a href="https://www.tampermonkey.net/" target="_blank" style="color: #6366f1;">Tampermonkey</a> for your browser</li>
-              <li><a href="https://raw.githubusercontent.com/TiltCheck-ME/tiltcheck-monorepo/main/TiltCheck-Auto-Vault.user.js" style="color: #6366f1;">Click here to install the Auto-Vault userscript</a></li>
+              <li>Install <a href="https://www.tampermonkey.net/" target="_blank"
+                  style="color: #6366f1;">Tampermonkey</a> for your browser</li>
+              <li><a
+                  href="https://raw.githubusercontent.com/TiltCheck-ME/tiltcheck-monorepo/main/TiltCheck-Auto-Vault.user.js"
+                  style="color: #6366f1;">Click here to install the Auto-Vault userscript</a></li>
               <li>Visit Stake and the TiltCheck widget will appear in the top-right corner</li>
-              <li>Configure your vault percentage and click <strong style="color: var(--text-primary);">Start</strong></li>
+              <li>Configure your vault percentage and click <strong style="color: var(--text-primary);">Start</strong>
+              </li>
             </ol>
           </div>
 
@@ -539,29 +550,35 @@
     <div class="faq-list">
       <div class="faq-item">
         <h4>What does beta testing involve?</h4>
-        <p>As a beta tester, you'll get early access to new features before public release. We ask that you use the tools, report bugs, and share your honest feedback through our in-app widget or Discord.</p>
+        <p>As a beta tester, you'll get early access to new features before public release. We ask that you use the
+          tools, report bugs, and share your honest feedback through our in-app widget or Discord.</p>
       </div>
       <div class="faq-item">
         <h4>Is there any cost to join?</h4>
-        <p>No! Beta access is completely free. We're grateful for your time and feedback, which is why we offer rewards and perks to active testers.</p>
+        <p>No! Beta access is completely free. We're grateful for your time and feedback, which is why we offer rewards
+          and perks to active testers.</p>
       </div>
       <div class="faq-item">
         <h4>How do I provide feedback?</h4>
-        <p>We've built a feedback widget right into our tools. You can also share feedback in our Discord beta channel, or schedule video calls with the team for detailed discussions.</p>
+        <p>We've built a feedback widget right into our tools. You can also share feedback in our Discord beta channel,
+          or schedule video calls with the team for detailed discussions.</p>
       </div>
       <div class="faq-item">
         <h4>What data do you collect?</h4>
-        <p>We collect anonymous usage data and click heatmaps to improve the product. All data is processed internally - we never share with third parties. See our Privacy Policy for details.</p>
+        <p>We collect anonymous usage data and click heatmaps to improve the product. All data is processed internally -
+          we never share with third parties. See our Privacy Policy for details.</p>
       </div>
       <div class="faq-item">
         <h4>Can I invite friends?</h4>
-        <p>Yes! We have a referral program. Share your unique link and both you and your friend get bonus rewards when they join.</p>
+        <p>Yes! We have a referral program. Share your unique link and both you and your friend get bonus rewards when
+          they join.</p>
       </div>
     </div>
   </section>
 
   <footer>
-    <p>© 2024 TiltCheck. <a href="/privacy.html">Privacy</a> · <a href="/terms.html">Terms</a> · <a href="/">Home</a></p>
+    <p>© 2024 TiltCheck. <a href="/privacy.html">Privacy</a> · <a href="/terms.html">Terms</a> · <a href="/">Home</a>
+    </p>
   </footer>
 
   <script>
@@ -633,4 +650,5 @@
 
   <script src="/scripts/auth.js"></script>
 </body>
+
 </html>
